Implemented encoding methods.